--- a/vignettes/DesignVignette.Rmd
+++ b/vignettes/DesignVignette.Rmd
@@ -16,11 +16,11 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Introduction
 
-/code{dsuds} is a package for designing distance sampling surveys in R. It currently offers a number of design options: systematic points, systematic lines, randomly lines, equal spaced zigzagz and equal spaces zigzags with complement lines. Different types of line transect designs may be used in different strata.
+'dsuds' is a package for designing distance sampling surveys in R. It currently offers a number of design options: systematic points, systematic lines, randomly lines, equal spaced zigzagz and equal spaces zigzags with complement lines. Different types of line transect designs may be used in different strata.
 
 ## Defining the Study Area
 
-Users can define a study area by either passing in a pathway to a shapefile or providing a polygon / multipolygon shape of class sf or sfc (see /code{sf} R library). Other options will be added in the future including the option to provide sp objects, data frames or lists of data frames.
+Users can define a study area by either passing in a pathway to a shapefile or providing a polygon / multipolygon shape of class sf or sfc (see 'sf' R library). Other options will be added in the future including the option to provide sp objects, data frames or lists of data frames.
 
 The user can provide a region name and names for strata if applicable. If no strata names are provided and the study area has multiple strata these will be automatically assigned as letters of the alpabet.
 
@@ -30,7 +30,7 @@ region <- make.region(region.name = "study.area", shape = "/Users/lhm/Documents/
 plot(region)
 ```
 
-Example of creating a study region manually. This example code is taken from the help file for /code{sf::st_multipolygon}. To create an sf polygon or multipolygon you first need to create 1 or more matrices of coordinates representing the outer polygons and any holes. For multipolygons the outer polygons and holes are defined by their placement within their list element, only the first matrix in a list element is an outer polygon then all the following matrices are holes. In the following example all polygons would be considered to be in the same strata.
+Example of creating a study region manually. This example code is taken from the help file for 'sf::st_multipolygon'. To create an sf polygon or multipolygon you first need to create 1 or more matrices of coordinates representing the outer polygons and any holes. For multipolygons the outer polygons and holes are defined by their placement within their list element, only the first matrix in a list element is an outer polygon then all the following matrices are holes. In the following example all polygons would be considered to be in the same strata.
 
 ```{r makeown}
 outer = matrix(c(0,0,10,0,10,10,0,10,0,0),ncol=2, byrow=TRUE)
@@ -66,7 +66,7 @@ region <- make.region(region.name = "study.area",
 plot(region)
 ```
 
-If no shape is supplied for the region The design package will make a default study area with the same dimensions as that in the simulation package /code{DSsim} 2000 x 500.
+If no shape is supplied for the region The design package will make a default study area with the same dimensions as that in the simulation package 'DSsim' 2000 x 500.
 
 ```{r defaultregion}
 default.region <- make.region()
@@ -78,7 +78,7 @@ plot(default.region)
 
 ## Defining the Design
 
-/code{dsuds} can generate two types of transect designs: points and lines. The default design is 20 systematic parallel lines with a design angle of 0, meaning that the lines run perpendicular to the x axis. 
+'dsuds' can generate two types of transect designs: points and lines. The default design is 20 systematic parallel lines with a design angle of 0, meaning that the lines run perpendicular to the x axis. 
 
 ```{r defaultdesign}
 default.design <- make.design(default.region)
@@ -241,6 +241,7 @@ plot(design.mix)
 ### Enhancements/issues yet to do... in order of importance
 
  - Generating line transect surveys by line length (working on it!)
+ - Generating line transect surveys by total number of samplers
  - Sort plotting warning Warning in plot.sf(x@samplers, add = add, col = col, pch = pch): ignoring all but the first attribute
  - Dealing with zero effort in some strata
  - Cyclic trackline distances for line transect surveys
