--- a/vignettes/DesignVignette.Rmd
+++ b/vignettes/DesignVignette.Rmd
@@ -215,7 +215,6 @@ plot(design.mix)
 
  - Generating line transect surveys by line length (working on it!)
  - Generating line transect surveys by total number of samplers
- - Sort plotting warning Warning in plot.sf(x@samplers, add = add, col = col, pch = pch): ignoring all but the first attribute
  - Dealing with zero effort in some strata
  - Cyclic trackline distances for line transect surveys
  - Merge/union problematic covered areas rather than removing small ones and hence remove the following warnings: Warning: Removing covered area greater than 100,000th of the strata 
@@ -231,12 +230,12 @@ plot(design.mix)
 Example of creating a study region manually. This example code is taken from the help file for 'sf::st_multipolygon'. To create an sf polygon or multipolygon you first need to create 1 or more matrices of coordinates representing the outer polygons and any holes. For multipolygons the outer polygons and holes are defined by their placement within their list element, only the first matrix in a list element is an outer polygon then all the following matrices are holes. In the following example all polygons would be considered to be in the same strata.
 
 ```{r makeown, fig.asp = 1}
-outer <- matrix(c(0,0,10,0,10,10,0,10,0,0),ncol=2, byrow=TRUE)
-hole1 <- matrix(c(1,1,1,2,2,2,2,1,1,1),ncol=2, byrow=TRUE)
-hole2 <- matrix(c(5,5,5,6,6,6,6,5,5,5),ncol=2, byrow=TRUE)
-pol1 <- list(outer, hole1, hole2)
-pol2 <- list(outer + 12, hole1 + 12)
-pol3 <- list(outer + 24)
+outer <- matrix(c(0,0,15,0,15,10,0,10,0,0),ncol=2, byrow=TRUE)
+hole1 <- matrix(c(2,2,2,3,3,3,3,2,2,2),ncol=2, byrow=TRUE)
+hole2 <- matrix(c(5,5,5,6,7,6,8,5.5,7,5,5,5),ncol=2, byrow=TRUE)
+pol1 <- list(outer, hole1*1.5, hole2)
+pol2 <- list(outer + 15, hole2*1.5 + 12)
+pol3 <- list(outer + 30, hole2*2.5 + 20)
 mp <- list(pol1,pol2,pol3)
 mp1 <- sf::st_multipolygon(mp)
 
@@ -248,12 +247,12 @@ plot(region)
 If instead you wanted to create the 3 separate polygons as 3 distinct strata you could use the following code:
 
 ```{r makeown2, fig.asp = 1}
-outer <- matrix(c(0,0,10,0,10,10,0,10,0,0),ncol=2, byrow=TRUE)
-hole1 <- matrix(c(1,1,1,2,2,2,2,1,1,1),ncol=2, byrow=TRUE)
-hole2 <- matrix(c(5,5,5,6,6,6,6,5,5,5),ncol=2, byrow=TRUE)
-pol1 <- sf::st_polygon(list(outer, hole1, hole2))
-pol2 <- sf::st_polygon(list(outer + 12, hole1 + 12))
-pol3 <- sf::st_polygon(list(outer + 24))
+outer <- matrix(c(0,0,15,0,15,10,0,10,0,0),ncol=2, byrow=TRUE)
+hole1 <- matrix(c(2,2,2,3,3,3,3,2,2,2),ncol=2, byrow=TRUE)
+hole2 <- matrix(c(5,5,5,6,7,6,8,5.5,7,5,5,5),ncol=2, byrow=TRUE)
+pol1 <- sf::st_polygon(list(outer, hole1*1.5, hole2))
+pol2 <- sf::st_polygon(list(outer + 15, hole2*1.5 + 12))
+pol3 <- sf::st_polygon(list(outer + 30, hole2*2.5 + 20))
 sfc <- sf::st_sfc(pol1,pol2,pol3)
 strata.names <- c("SW", "central", "NE")
 mp1 <- sf::st_sf(strata = strata.names, geom = sfc)
