--- a/vignettes/GettingStarted.Rmd
+++ b/vignettes/GettingStarted.Rmd
@@ -43,7 +43,7 @@ cover <- make.coverage(region,
 
 ## Defining the Design
 
-dssd provides a number of point and line transect designs. Here we will demonstrate a systematic parallel line design. We will define the desired effort as 1300 km, an amount we will have estimated based on a pilot survey which should give us our desired precision in the main survey. Usually edge effects for line transect surveys are minimal so we will choose to carry out minus sampling. The design angle for parallel line designs is 0 for vertical lines and then moves round in a clockwise direction. Here I have left the design angle as 0 as this gives lines that are roughly perpendicular to the coastline and maximises the number of samplers. I have set the truncation distance to be 2 km, this is the maximum distance at which it is possible to make detections and is used to define the covered area. The covered area refers to the area of the study region which is sampled during the survey, this is a set of rectangles around line transects or a set of cirles around point transects.
+dssd provides a number of point and line transect designs. Here we will demonstrate a systematic parallel line design. We will define the desired effort as 1300 km, an amount we will have estimated based on a pilot survey which should give us our desired precision in the main survey. Note that the line length units will always be the same as the region coordinate units. Usually edge effects for line transect surveys are minimal so we will choose to carry out minus sampling. The design angle for parallel line designs is 0 for vertical lines and then moves round in a clockwise direction. Here I have left the design angle as 0 as this gives lines that are roughly perpendicular to the coastline and maximises the number of samplers. I have set the truncation distance to be 2 km, this is the maximum distance at which it is possible to make detections and is used to define the covered area. The covered area refers to the area of the study region which is sampled during the survey, this is a set of rectangles around line transects or a set of cirles around point transects which are then clipped to the strata boundaries. If these rectangles or circles overlap, then the areas of overlap are counted twice. This means that it is possible, with a sufficiently large truncation distance, to sample more than 100% of the survey region.
 
 ```{r design}
 design <- make.design(region = region, 
