--- a/vignettes/MultiStrataVignette.Rmd
+++ b/vignettes/MultiStrataVignette.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Design Vignette: dsuds"
+title: "Multiple Strata in dssd"
 author: "Laura Marshall"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Design Vignette: dsuds}
+  %\VignetteIndexEntry{Multiple Strata: dssd}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -13,6 +13,9 @@ vignette: >
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+
+
+## WHOLE THING TO BE RE-WRITTEN to follow on from Getting Started Vignette
 
 ## Introduction
 
